fix #135425 : GAP between headerimage and toolbar
git-svn-id: https://svn.bgdi.admin.ch/mf-geoadmin2/trunk@139 a186c27d-65e8-40a5-ab69-11a960a16feb

--- a/geoadmin/geoadmin/public/app/css/main.css
+++ b/geoadmin/geoadmin/public/app/css/main.css
@@ -143,6 +143,14 @@ a:link, a:active, a:visited {
     margin-top: 6px !important;
 }
 
+.ext-ie div.navServiceBackground {
+    margin-top: -3px;
+}
+
+.ext-ie div.geoadmin-mappanel div.x-panel-tbar div.x-toolbar {
+    padding-bottom: 0;
+}
+
 .side-panel-expanded, .side-panel-collapsed {
     background-image: url(../images/tb_toggle_button.png);
     background-repeat: no-repeat;
